crates/wgso/tests/cases_invalid/unknown_run_arg_field/.expected
error: unknown field for type `TestStruct`
 --> ./tests/cases_invalid/unknown_run_arg_field/root.wgsl:2:24
  |
2 | #run test(param=buffer.unknown)
  |                        ^^^^^^^
  |